--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/inspiri2/public_html
-    - /bin/cp -R * $DEPLOYPATH
+    - export DEPLOYPATH=/home/inspiri2/public_html/
+    - /bin/cp -r * $DEPLOYPATH
